@@ -1,11 +1,5 @@
-from zope.interface import Interface
-from zope.interface import implements
-
-class IMyModel(Interface):
-    pass
-
 class MyModel(object):
-    implements(IMyModel)
+    pass
 
 root = MyModel()
 
